k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chillphim-ingress
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    # CHÚ Ý: Copy chính xác tên RG từ ảnh màn hình của bạn vào đây
    appgw.ingress.kubernetes.io/appgw-resource-group: "MC_chillphim-rg_chillphim-aks_japaneast"
    appgw.ingress.kubernetes.io/appgw-name: "chillphim-appgw"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chillphim-service
                port:
                  number: 80
